# lib/Model/Measures.php
@@ -1,6 +1,6 @@
 <?php
 /**
- * Measurements
+ * Measures
  *
  * PHP version 5
  *
@@ -18,7 +18,7 @@
  * OpenAPI spec version: 0.1.0
  * 
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
- * Swagger Codegen version: 2.4.12
+ * Swagger Codegen version: 2.4.13
  */
 
 /**
@@ -33,14 +33,14 @@ use \ArrayAccess;
 use \Swagger\Client\ObjectSerializer;
 
 /**
- * Measurements Class Doc Comment
+ * Measures Class Doc Comment
  *
  * @category Class
  * @package  Swagger\Client
  * @author   Swagger Codegen team
  * @link     https://github.com/swagger-api/swagger-codegen
  */
-class Measurements implements ModelInterface, ArrayAccess
+class Measures implements ModelInterface, ArrayAccess
 {
     const DISCRIMINATOR = null;
 
@@ -49,7 +49,7 @@ class Measurements implements ModelInterface, ArrayAccess
       *
       * @var string
       */
-    protected static $swaggerModelName = 'measurements';
+    protected static $swaggerModelName = 'measures';
 
     /**
       * Array of property to type mappings. Used for (de)serialization
