# lib/Model/Observations.php
@@ -18,7 +18,7 @@
  * OpenAPI spec version: 0.1.0
  * 
  * Generated by: https://github.com/swagger-api/swagger-codegen.git
- * Swagger Codegen version: 2.4.12
+ * Swagger Codegen version: 2.4.13
  */
 
 /**
@@ -72,10 +72,10 @@ class Observations implements ModelInterface, ArrayAccess
         'station_id' => 'string',
         'uv' => 'float',
         'winddir' => 'int',
-        'imperial' => 'object',
-        'metric' => 'object',
-        'metric_si' => 'object',
-        'uk_hybrid' => 'object'
+        'imperial' => '\Swagger\Client\Model\Measures',
+        'metric' => '\Swagger\Client\Model\Measures',
+        'metric_si' => '\Swagger\Client\Model\Measures',
+        'uk_hybrid' => '\Swagger\Client\Model\Measures'
     ];
 
     /**
@@ -691,7 +691,7 @@ class Observations implements ModelInterface, ArrayAccess
     /**
      * Gets imperial
      *
-     * @return object
+     * @return \Swagger\Client\Model\Measures
      */
     public function getImperial()
     {
@@ -701,7 +701,7 @@ class Observations implements ModelInterface, ArrayAccess
     /**
      * Sets imperial
      *
-     * @param object $imperial imperial
+     * @param \Swagger\Client\Model\Measures $imperial imperial
      *
      * @return $this
      */
@@ -715,7 +715,7 @@ class Observations implements ModelInterface, ArrayAccess
     /**
      * Gets metric
      *
-     * @return object
+     * @return \Swagger\Client\Model\Measures
      */
     public function getMetric()
     {
@@ -725,7 +725,7 @@ class Observations implements ModelInterface, ArrayAccess
     /**
      * Sets metric
      *
-     * @param object $metric metric
+     * @param \Swagger\Client\Model\Measures $metric metric
      *
      * @return $this
      */
@@ -739,7 +739,7 @@ class Observations implements ModelInterface, ArrayAccess
     /**
      * Gets metric_si
      *
-     * @return object
+     * @return \Swagger\Client\Model\Measures
      */
     public function getMetricSi()
     {
@@ -749,7 +749,7 @@ class Observations implements ModelInterface, ArrayAccess
     /**
      * Sets metric_si
      *
-     * @param object $metric_si metric_si
+     * @param \Swagger\Client\Model\Measures $metric_si metric_si
      *
      * @return $this
      */
@@ -763,7 +763,7 @@ class Observations implements ModelInterface, ArrayAccess
     /**
      * Gets uk_hybrid
      *
-     * @return object
+     * @return \Swagger\Client\Model\Measures
      */
     public function getUkHybrid()
     {
@@ -773,7 +773,7 @@ class Observations implements ModelInterface, ArrayAccess
     /**
      * Sets uk_hybrid
      *
-     * @param object $uk_hybrid uk_hybrid
+     * @param \Swagger\Client\Model\Measures $uk_hybrid uk_hybrid
      *
      * @return $this
      */
